新增大厅/房间背景音乐与音量设置；编译目标升至 Java 11
- 前端：大厅/房间两套 BGM 循环播放；增加声音设置弹窗（SFX/BGM 音量、localStorage 持久化、试听）
- 资源：补齐 frontend/public/sounds 与 pieces 目录（.gitkeep），更新 SOUND_EFFECTS.md
- 后端：补充 DTO/记录事件结构化与记录加载解析改进（本次提交包含）
- 构建：pom.xml java.version 调整为 11
- 维护：忽略 frontend/dist 并移除已误入库的 target/classes 产物

Made-with: Cursor